--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,8 @@
     "titleBar.inactiveBackground": "#5c530399",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#5c5303"
+  "peacock.color": "#5c5303",
+  "conventionalCommits.scopes": [
+    "apps/strapi"
+  ]
 }
